--- a/web/src/styles/index.css
+++ b/web/src/styles/index.css
@@ -108,6 +108,6 @@ summary {
 }
 
 ::-webkit-scrollbar-thumb {
-    background: rgba(46, 46, 46, 0.2);
+    background: #c8c8c833;
     border-radius: 6px;
 }
